fix(footer): size on mobile device

--- a/purge_tournament/assets/styles/css/style.css
+++ b/purge_tournament/assets/styles/css/style.css
@@ -899,6 +899,9 @@ table {
   #admin-tournament-list h2 {
     font-size: 1.5rem;
   }
+  #admin-tournament-list table {
+    max-width: 700px;
+  }
   #admin-tournament-list table thead tr th {
     font-size: 0.8rem;
     padding: 0.5rem;
@@ -1635,7 +1638,7 @@ table {
   text-align: center;
   padding: 3rem;
   border-top: 1px solid #91848c;
-  min-height: 10vh;
+  min-height: 20vh;
 }
 .main-footer .footer-content {
   display: flex;
