--- a/purge_tournament/assets/styles/sass/partials/_footer.scss
+++ b/purge_tournament/assets/styles/sass/partials/_footer.scss
@@ -5,7 +5,7 @@
     text-align: center;
     padding: 3rem;
     border-top: 1px solid $primary-grey;
-    min-height: 10vh;
+    min-height: 20vh;
 
 
     .footer-content {
