--- a/purge_tournament/assets/styles/sass/tournaments/_tournaments.scss
+++ b/purge_tournament/assets/styles/sass/tournaments/_tournaments.scss
@@ -96,6 +96,7 @@
         }
 
         table {
+            max-width: 700px;
             thead {
                 tr {
                     th {
